--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/drawer": "^6.6.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.24",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "expo": "~50.0.11",
@@ -17,7 +19,9 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-paper": "^5.12.3",
     "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
     "twrnc": "^4.1.0"
   },
   "devDependencies": {
