--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "gym-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "backend/server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": " nodemon backend/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.16",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "nodemon": "^3.1.0"
   }
 }
