--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.4",
     "react-native-paper": "^5.12.3",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
